# GPUWorkLib

./: !!!! read.txt  .clangd  .gitignore  CMakeLists.txt  DrvGPU-Settings-2026-02-01-2014.~zip  README.md  run.bat  run.sh
.mcp-debug-tools/: config.json
Doc/: DEBUG_HOWTO.md  DRVGPU_COMMENTS_RU_LIST.md  FFT_MAXIMA_COMMENTS_RU_LIST.md  FIX_C4996_AND_LNK2019.md  installdeps.md  ~!! Call kernl.md
Doc/DrvGPU/: Architecture.md  Classes.md  DrvGPU Files Index.html  DrvGPU-Architecture.md  DrvGPU-Build-CMakeLists.txt  DrvGPU-Docs-README.md  DrvGPU-INDEX.md  DrvGPU-README.md  DrvGPU-backend-opencl-hpp.md  DrvGPU-drvgpu-hpp.md  DrvGPU-gpu-manager-hpp.md  DrvGPU-ibackend-hpp.md  OpenCL.md
Doc/DrvGPU/Arс/: DrvGPU-Examples-multi_gpu.cpp  DrvGPU-Examples-single_gpu.cpp
Doc/DrvGPU_отладка/: DrvGPU Files Index.html  DrvGPU-CMake-Config.in  DrvGPU-CMake-Examples.txt  DrvGPU-CMake-Index.md  DrvGPU-CMake-Simple.txt  DrvGPU-CMakeLists-Main.txt  DrvGPU-Quick-Start.md  DrvGPU-Setup-Guide.md
Doc/Info_RAM_OpenCl_ROCm/: AMD_GPU_OpenCL_ROCm_ZeroCopy_2026-02-06.md
Doc/Memory_test/1/: DEADLOCK_FIX_patch.txt  INSTRUCTIONS.txt  README.txt  memory_manager-FIXED.cpp  memory_manager-FIXED.hpp
Doc/Modules/: DELIVERY-SUMMARY.md  HOW-TO-ASSEMBLE-CPP.md  INTEGRATION-GUIDE.md  modules-README.md
Doc/Modules/search_maxim/: ANTENNA-COMPLETE-DOCS.md  SEARCH_3-ARCHITECTURE.md  antenna-CMakeLists.txt  document.docx  search_3_fft.cl  search_3_module-part1.cpp  search_3_module-part2.cpp  search_3_module-part3.cpp  search_3_module-part4.cpp  search_3_module.hpp  search_3_params.hpp  search_3_result.hpp
Doc/Modules/search_maxim/Test/: ANTENNA-TESTS-README.md  antenna-tests-CMakeLists.txt  document.docx
Doc/PLAN/: DETAILED_EXECUTION_PLAN.md  DETAILED_PLAN_FFT_SPECTRUM_MAXIMA.md  Pl1.md  plan1.md  plan2.md  plan3.md
Doc/PLAN/MOVE/: !!_mcp.~zip  .mcp.json  README_FFT_TRANSFER.md
Doc/Архитекура/: FILES_EXPORTED_SUMMARY.md  GPU-Library-Architecture.md  Implementation-Examples.md  LID-Architecture.md  PROJECT_INDEX.md  Project-Summary-And-Next-Steps.md  Quick-Start-Guide.md  README.md  Singleton-vs-MultiGPU-Comparison.md  Набор вызова- DrvGPU- Multi-GPU-Architecture.md
Doc/План/: DebugLogger_Plan.md  DrvGPU Files Index.html  External-Context-Integration-Guide.md  external_cl_buffer_adapter.hpp  opencl_backend_external.hpp
DrvGPU/: CMakeLists.txt  drv_gpu.hpp  gpu_manager.hpp  module_registry.hpp
DrvGPU/backends/opencl/: command_queue_pool.cpp  opencl_backend.cpp  opencl_backend.hpp  opencl_backend_external.cpp  opencl_core.cpp  opencl_core.hpp
DrvGPU/common/: backend_type.hpp  config_logger.cpp  default_logger.cpp  default_logger.hpp  i_backend.hpp
DrvGPU/config/: config_types.hpp  gpu_config.cpp  gpu_config.hpp
DrvGPU/include/: drv_gpu.hpp  gpu_manager.hpp  module_registry.hpp
DrvGPU/interface/: README.md  i_backend.hpp  i_compute_module.hpp  i_data_sink.hpp  i_memory_buffer.hpp
DrvGPU/logger/: README.md  config_logger.cpp  default_logger.cpp  default_logger.hpp  logger.hpp
DrvGPU/memory/: gpu_buffer.hpp  memory_manager.hpp  svm_buffer.hpp  svm_capabilities.hpp
DrvGPU/services/: async_service_base.hpp  batch_manager.cpp  batch_manager.hpp  console_output.hpp  gpu_profiler.hpp  service_manager.hpp
DrvGPU/src/: drv_gpu.cpp  module_registry.cpp
DrvGPU/tests/: multi_gpu.hpp  single_gpu.hpp  test_services.hpp
MemoryBank/: fft_maxima_session_2026-02-04.md  mcp_servers_config_2026-02-05.md
include/DrvGPU/: CMakeLists.txt  backend_type.hpp  command_queue_pool.cpp  drv_gpu.cpp  drv_gpu.hpp  gpu_buffer.hpp  gpu_device_info.hpp  gpu_manager.hpp  i_backend.hpp  i_compute_module.hpp  i_memory_buffer.hpp  load_balancing.hpp  memory_manager.hpp  memory_type.hpp  module_registry.cpp  module_registry.hpp  opencl_backend.cpp  opencl_backend.hpp  opencl_core.cpp  opencl_core.hpp  svm_capabilities.hpp
include/DrvGPU/backends/opencl/: command_queue_pool.cpp  command_queue_pool.hpp  opencl_backend.cpp  opencl_backend.hpp  opencl_backend_external.cpp  opencl_backend_external.hpp  opencl_core.cpp  opencl_core.hpp
include/DrvGPU/common/: backend_type.hpp  config_logger.cpp  config_logger.hpp  default_logger.cpp  i_backend.hpp  logger.cpp  logger.hpp  logger_interface.hpp
include/DrvGPU/memory/: gpu_buffer.hpp  memory_manager.cpp  memory_manager.hpp
include/DrvGPU/modules/: CMakeLists.txt
include/DrvGPU/modules/example/: CMakeLists.txt  README.md
include/DrvGPU/modules/example/kernels/: vector_ops.cl
include/DrvGPU/modules/example/src/: vector_ops_module-part2.cpp  vector_ops_module-part3.cpp
modules/: CMakeLists.txt
modules/example/: CMakeLists.txt
modules/example/include/: vector_ops_module.hpp
modules/example/src/: vector_ops_module-part1.cpp  vector_ops_module-part2.cpp  vector_ops_module-part3.cpp
modules/example/tests/: test_vector_ops.hpp
modules/fft_maxima/: CMakeLists.txt  README.md
modules/fft_maxima/include/: antenna_fft_core.h  antenna_fft_debug.h  antenna_fft_release.h  fft_batch_adapter.hpp  fft_logger.h  fft_plan_cache.hpp  fft_result_writer.hpp  spectrum_maxima_finder.h
modules/fft_maxima/include/kernels/: fft_kernel_sources.hpp
modules/fft_maxima/kernels/: fft_kernels.cl
modules/fft_maxima/src/: antenna_fft_core.cpp  antenna_fft_debug.cpp  antenna_fft_release.cpp  spectrum_maxima_finder.cpp
modules/fft_maxima/tests/: test_external_context_fft.hpp  test_fft_maxima.cpp  test_fft_maxima.hpp  test_fft_svm.hpp  test_spectrum_maxima.hpp
modules/search_maxim/: CMakeLists.txt  README.md
modules/search_maxim/include/: search_3_module.hpp  search_3_params.hpp  search_3_result.hpp
modules/search_maxim/src/: search_3_module-part1.cpp  search_3_module-part2.cpp  search_3_module-part3.cpp  search_3_module-part4.cpp
modules/search_maxim/tests/: test_antenna_module.hpp
src/: CMakeLists.txt  main.cpp  single_gpu.hpp
tests/: example_external_context_usage.hpp  multi_gpu.hpp  single_gpu.hpp  test_vector_ops.hpp
